force-app/src/objects/PagesApi__Field__c.object
<CustomObject>
    <description>Fields store data that drives the look and field and behavior of web forms published in the Web Publisher application.</description>
    <fields>
        <fullName>PagesApi__Dependent_Picklist_Field__c</fullName>
        <description>This field references one of the dependent picklist fields to be shown in the form.</description>
        <inlineHelpText>This field references one of the dependent picklist fields to be shown in the form.</inlineHelpText>
        <label>Dependent Picklist Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Dependent_Picklist_Object__c</fullName>
        <description>This field defines the object where the dependent picklist is configured.</description>
        <inlineHelpText>This field defines the object where the dependent picklist is configured.</inlineHelpText>
        <label>Dependent Picklist Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Field_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**Required** All fields must be associated with a Field Group. Field Groups can be used to update and create new records in the database.</description>
        <inlineHelpText>**Required** All fields must be associated with a Field Group. Field Groups can be used to update and create new records in the database.</inlineHelpText>
        <label>Field Group</label>
        <referenceTo>PagesApi__Field_Group__c</referenceTo>
        <relationshipLabel>Fields</relationshipLabel>
        <relationshipName>Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates parent field record to child field record.</description>
        <inlineHelpText>Relates parent field record to child field record.</inlineHelpText>
        <label>Parent Field</label>
        <referenceTo>PagesApi__Field__c</referenceTo>
        <relationshipLabel>Fields</relationshipLabel>
        <relationshipName>Child_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates this field to a form.</description>
        <inlineHelpText>Associates this field to a form.</inlineHelpText>
        <label>Form</label>
        <referenceTo>PagesApi__Form__c</referenceTo>
        <relationshipLabel>Fields</relationshipLabel>
        <relationshipName>Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PagesApi__Help_Text__c</fullName>
        <description>A value in this field displays a help icon next to the field on the form.  Hovering the cursor over the help icon displays a text box with the help text field&apos;s content to assist the user in understanding the nature of the question.</description>
        <inlineHelpText>A value in this field displays a help icon next to the field on the form.  Hovering the cursor over the help icon displays a text box with the help text field&apos;s content to assist the user in understanding the nature of the question.</inlineHelpText>
        <label>Help Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Hidden_Field_Value__c</fullName>
        <description>Populates a hidden field with the value entered in this field (only required when field is hidden on the form by default).</description>
        <inlineHelpText>Populates a hidden field with the value entered in this field (only required when field is hidden on the form by default).</inlineHelpText>
        <label>Hidden Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does not display the field to end users when checked. This is typically used when you wish to pass default or constant values as the value for the field.</description>
        <inlineHelpText>Does not display the field to end users when checked. This is typically used when you wish to pass default or constant values as the value for the field.</inlineHelpText>
        <label>Hidden Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requires the field for all users submitting the form. Defaults unchecked.</description>
        <inlineHelpText>Requires the field for all users submitting the form. Defaults unchecked.</inlineHelpText>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PagesApi__Mapped_Field__c</fullName>
        <description>**Optional** Specifies the field the response will be mapped to.</description>
        <inlineHelpText>**Optional** Specifies the field the response will be mapped to.</inlineHelpText>
        <label>Mapped Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PagesApi__Options__c</fullName>
        <description>Specifies the list of values for a Picklist or Multi-Picklist field below. Each value should be separated by a new line.</description>
        <inlineHelpText>Specifies the list of values for a Picklist or Multi-Picklist field below. Each value should be separated by a new line.</inlineHelpText>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PagesApi__Order__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Specifies the order this field is presented to the end user.</description>
        <inlineHelpText>Specifies the order this field is presented to the end user.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PagesApi__Type__c</fullName>
        <description>Identifies the field type to be created. Section Header and Instructional Text fields build out read-only content in the form to enhance the user experience.</description>
        <inlineHelpText>Identifies the field type to be created. Section Header and Instructional Text fields build out read-only content in the form to enhance the user experience.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment Unlimited Size</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Date/Time</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>Dependent Picklist</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Instructional Text</fullName>
                </value>
                <value>
                    <fullName>Multipicklist</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Section Header</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Text Area</fullName>
                </value>
                <value>
                    <fullName>Text Area Long</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Field</label>
    <nameField>
        <label>Field Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>